--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.header img {
+  height: 200px;
+  width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav ul {
+  display: flex;
+  list-style: none;
+}
+
+.Nav ul li {
+  margin-left: 30px;
+}
+
+.Nav ul a {
+  font-weight: bold;
+  text-decoration: none;
+  color: #333333;
+  font-size: 20px;
+}
+
+footer {
+  background-color: #EDEFEE;
+  justify-content: space-between;
+  padding: 1rem;
+  display: flex;
+}
+
+footer img {
+  max-width: 50%;
+}
+
+footer p {
+  border-top: 0.15rem solid #333333;
+  width: 30%;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  text-align: right;
+  padding-top: 1rem;
 }
