--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,85 @@ footer p {
   text-align: right;
   padding-top: 1rem;
 }
+
+
+  body {
+    font-family: 'Karla', sans-serif;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#hero {
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('./img/restaurant_inside.jpg');
+  background-size: cover;
+  background-position: 75%;
+  color: white;
+  min-height: 200px;
+  text-align: center;
+}
+
+#hero p {
+  font-size: 2rem;
+  margin:0;
+  text-shadow: 2px 2px 4px #333333;
+}
+
+.cta {
+  display: inline-block;
+  color: rgba(255, 255, 255, 0.9);
+  width: 200px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 8px;
+  border: 3px solid #fff;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  margin: 1rem;
+}
+
+.cta:hover {
+  color:#fff;
+  background:#495E57;
+  border: 3px solid #495E57;
+}
+
+.heading-shadow {
+  text-shadow: 1px 1px 4px #333333;
+}
+
+
+/* 3 cards */
+section {
+    display: flex;
+    gap: 2rem 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    flex-direction: row;
+}
+
+article {
+    flex:1;
+}
+
+article p {
+  font-size: 20px;
+  font-family: 'Karla', sans-serif;
+}
+
+article img {
+    max-width: 100%;
+}
+
+article ul {
+    list-style: none;
+}
+
+main article {
+    border: 1px solid #EDEFEE;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
